[tool.poetry]
name = "pmon"
version = "0.2.0"
description = "A process monitor for linux"
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]
license = "MIT"
readme = 'README.md'  # Markdown files are supported
repository = "https://github.com/pmav99/pmon"
homepage = "https://github.com/pmav99/pmon"
keywords=['cli', 'typer', 'process', 'monitor']
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Software Development",
    "Topic :: System",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
]


[tool.poetry.dependencies]
python = "^3.6"
psutil = "^5.7.3"
typer = {version = "^0.3.2", extras = ["all"]}

[tool.poetry.dev-dependencies]
ipython = "*"
mypy = "^0.790"
black = "^20.8b1"

[tool.poetry.scripts]
pmon = "pmon.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 129
target-version = ['py36']
